Docker and Kubernetes/simple-app-minikube/kubernetes/services/service-affinity.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-affinity
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
